# app_cam_ande

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  database.py  detector_runner.py  main.py  models.py  schemas.py
app/api/: routes.py
app/services/: alarm.py  auth.py  camera.py  detector.py  events.py  features.py  watchlist.py
app/web/: views.py
app/web/static/css/: style.css
app/web/static/js/: dashboard.js
app/web/templates/: base.html  dashboard.html  login.html  register.html
